[gd_scene load_steps=3 format=3 uid="uid://dm5qri4m3uh6f"]

[ext_resource type="Script" uid="uid://be3dkio1god2u" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://cdtxgos4r4xe2" path="res://fonts/Xolonium-Regular.ttf" id="2_8sq4i"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.5
offset_right = 136.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(480, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -11.5
offset_right = 240.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 32
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 32
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 6.0
offset_right = 297.0
offset_bottom = 49.0
color = Color(0.70717716, 0.7852611, 0.7852611, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 13.0
offset_top = 10.0
offset_right = 292.0
offset_bottom = 44.0
color = Color(0.19, 0.19, 0.19, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 51.0
offset_right = 297.0
offset_bottom = 79.0
color = Color(0.79, 0.711, 0.711, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 13.0
offset_top = 55.0
offset_right = 292.0
offset_bottom = 75.0
color = Color(0.19, 0.19, 0.19, 1)

[node name="Health" type="ColorRect" parent="."]
z_index = 1
offset_left = 13.0
offset_top = 10.0
offset_right = 292.0
offset_bottom = 44.0
color = Color(0.74, 0.1554, 0.1554, 1)

[node name="Stamina" type="ColorRect" parent="."]
z_index = 1
offset_left = 13.0
offset_top = 55.0
offset_right = 292.0
offset_bottom = 75.0
color = Color(1, 0.8786667, 0.48000002, 1)

[connection signal="pressed" from="StartButton" to="." method="on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="on_message_timer_timeout"]
